<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_duckPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_dogPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/button_generate_dog_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_catPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_generate_cat_photo"
        app:layout_constraintBottom_toBottomOf="@+id/bt_dogPhoto"
        app:layout_constraintEnd_toStartOf="@+id/bt_foxPhoto"
        app:layout_constraintStart_toEndOf="@+id/bt_dogPhoto"
        app:layout_constraintTop_toTopOf="@+id/bt_dogPhoto" />

    <Button
        android:id="@+id/bt_foxPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/button_generate_fox_photo"
        app:layout_constraintBottom_toBottomOf="@+id/bt_catPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bt_catPhoto" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/iv_photo"
        app:layout_constraintEnd_toEndOf="@+id/iv_photo"
        app:layout_constraintStart_toStartOf="@+id/iv_photo"
        app:layout_constraintTop_toTopOf="@+id/iv_photo" />

    <Button

        android:id="@+id/bt_birdPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/button_generate_bird_photo"
        app:layout_constraintBottom_toTopOf="@+id/bt_dogPhoto"
        app:layout_constraintEnd_toEndOf="@+id/bt_dogPhoto"
        app:layout_constraintStart_toStartOf="@+id/bt_dogPhoto" />

    <Button
        android:id="@+id/bt_duckPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/button_generate_duck_photo"
        app:layout_constraintBottom_toTopOf="@+id/bt_catPhoto"
        app:layout_constraintEnd_toEndOf="@+id/bt_catPhoto"
        app:layout_constraintStart_toStartOf="@+id/bt_catPhoto" />

    <Button

        android:id="@+id/bt_randomPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/button_generate_random_photo"
        app:layout_constraintBottom_toTopOf="@+id/bt_foxPhoto"
        app:layout_constraintEnd_toEndOf="@+id/bt_foxPhoto"
        app:layout_constraintStart_toStartOf="@+id/bt_foxPhoto" />

</androidx.constraintlayout.widget.ConstraintLayout>